--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,14 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap" rel="stylesheet">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -19,11 +24,40 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <nav class="navbar fixed-top">
+      <span class="nav-span title-span">tweeter</span>
+      <span class="new-tweet tweet-span"><b>Write</b> a new tweet</span>
     </nav>
 
+    <header>
+      <div>
+          <img class="avatar" src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2 id="name">Your Name</h2>
+      </div>
+  </header>
+
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+        <section class="tweet">
+          <h2>Compose Tweet</h2>
+          <form method="POST" action='/tweets'>
+            <textarea class="form-text" name="text" placeholder="What are you humming about?"></textarea>
+            <input class="submit-tweet" type="submit" value="Tweet">
+            <span id=counter>140</span>
+          </form>
+        </section>
+      
+      <div class="main-div">
+        <p1>Example paragraph.</p1>
+        <div class="main-inner-div"></div>
+      </div>
+      <div class="main-div">
+        <p1>Example paragraph.</p1>
+        <div class="main-inner-div"></div>
+      </div>
+    </main>
   </body>
 </html>
