stylized the tweet container in main, added hover feature

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,15 @@
             <span id=counter>140</span>
           </form>
         </section>
-        <article>
-          <header></header>
-
+        <article class="article-tweet">
+          <header class="tweet-header">
+            <span>Name</span>
+            <span id=user-handle>@userHandle</span>
+          </header>
+          <p class="tweet-text">An example tweet.</p>
+          <footer class="tweet-footer">
+            <p id=tweet-age>X days old</p>
+          </footer>
         </article>
     </main>
   </body>
