changed class names to be more clear

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <nav class="navbar fixed-top">
-      <span class="nav-span title-span">tweeter</span>
-      <span class="new-tweet tweet-span"><b>Write</b> a new tweet</span>
+    <nav class="navbar nav-fixed-top">
+      <span class="nav-span tweeter-span">tweeter</span>
+      <span class="new-tweet"><b>Write</b> a new tweet</span>
     </nav>
 
     <header class="page-header">
