added avatar to tweet article element in index.html and create tweet functions

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         <section id="tweets-container">
           <article class="tweet-container">
             <header>
+              <img src="https://i.imgur.com/73hZDYK.png">
               <span id="user-name">Name</span>
               <span id="user-handle">@userHandle</span>
             </header>
