--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/78d940ced5.js" crossorigin="anonymous"></script>
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,700,700i&display=swap" rel="stylesheet">
 
@@ -59,6 +62,12 @@
             <p class="tweet-text">An example tweet.</p>
             <footer>
               <p id=tweet-age>X days old</p>
+              <div>
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-retweet"></i>
+                <i class="fas fa-flag"></i>
+              </div>
+              
             </footer> 
           </article>
         </section>
