--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
     <nav class="navbar nav-fixed-top">
       <span class="nav-span tweeter-span">tweeter</span>
       <span class="new-tweet"><b>Write</b> a new tweet</span>
+      <i class="arrow down"></i>
+      <button class="click-to-tweet" type="button" ></button>
     </nav>
 
     <header class="page-header">
@@ -46,7 +48,7 @@
 
     <!-- Page-specific (main) content here -->
     <main>
-        <section class="tweet">
+        <section id="new-tweet-form" class="tweet">
           <form id="tweet-form" method="POST" action='/tweets'>
             <textarea id="form-text" name="text" placeholder="What are you humming about?"></textarea>
             <input class="submit-tweet" type="submit" value="Tweet">
