arrow button now jumps via jquery bounce effects, had to require jquery UI script and stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment-with-locales.min.js"></script>
-    
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha256-rByPlHULObEjJ6XQxW/flG2r+22R5dKiAoef+aXWfik=" crossorigin="anonymous" />
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -37,9 +37,10 @@
       <span class="nav-span tweeter-span">tweeter</span>
       <span class="new-tweet"><b>Write</b> a new tweet</span>
       <!-- <i class="arrow down" ></i> -->
-      <button id="arrow-button" class="down click-to-tweet" type="button" ></button>
+      <button id="arrow-button" class="bounce down click-to-tweet" type="button" ></button>
     </nav>
 
+    <!-- Main Container -->
     <div class="main-container">
       <div class="main-container-child1">
         <!-- Header -->
