final commits before submission, cleaned up client.js to make more readable

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-
   </head>
 
   <body>
@@ -42,6 +41,7 @@
 
     <!-- Main Container -->
     <div class="main-container">
+
       <div class="main-container-child1">
         <!-- Header -->
         <header class="page-header">
@@ -49,8 +49,9 @@
               <img class="avatar" src="/images/profile-hex.png"> 
               <h2 id="name">Your Name</h2>
           </div>
-       </header>
+        </header>
       </div>
+      
        <!-- Page-specific (main) content here -->
       <div class="main-container-child2">
         <main>
@@ -85,8 +86,8 @@
               </footer> 
             </article>
           </section>
-         </main>
-        </divclass="main-container-child">
+        </main>
+      </div>
     </div>
   </body>
 </html> 
